@@ -24,6 +24,16 @@ configurations {
     }
 }
 
+sourceSets {
+    integrationTest {
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
+    }
+}
+
+configurations.integrationTestImplementation.extendsFrom configurations.testImplementation
+configurations.integrationTestRuntimeOnly.extendsFrom configurations.testRuntimeOnly
+
 repositories {
     mavenCentral()
 }
@@ -43,13 +53,15 @@ dependencies {
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.13.0"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.13.0"
     annotationProcessor "org.projectlombok:lombok"
-    testImplementation "org.springframework.boot:spring-boot-starter-data-jpa-test"
-    testImplementation "org.springframework.boot:spring-boot-starter-liquibase-test"
-    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
-}
 
-tasks.named("test") {
-    useJUnitPlatform()
+    testImplementation "org.springframework.boot:spring-boot-starter-test"
+    testImplementation "org.springframework.boot:spring-boot-test"
+    testImplementation "org.springframework.boot:spring-boot-webtestclient"
+    testImplementation "org.springframework.boot:spring-boot-starter-data-jpa-test"
+    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
+
+    integrationTestImplementation "org.testcontainers:postgresql:1.21.4"
+    integrationTestImplementation "org.testcontainers:junit-jupiter:1.21.4"
 }
 
 tasks.register("createChangeDir") {
@@ -76,3 +88,28 @@ tasks.register("createChangeDir") {
     }
 }
 
+tasks.named("test") {
+    useJUnitPlatform()
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
+}
+
+tasks.named('processIntegrationTestResources') {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+tasks.register("integrationTest", Test) {
+    group = "verification"
+    description = "Runs integration tests"
+
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+
+    useJUnitPlatform()
+    jvmArgs "-XX:+EnableDynamicAgentLoading"
+
+    shouldRunAfter tasks.test
+}
+
+tasks.named("check") {
+    dependsOn tasks.integrationTest
+}
